--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -24,7 +24,7 @@
 					</span>
 				</h1>
 				<h2 class="text-blue text-normal sub-text">The transformation starts&nbsp;here.</h2>
-				<div class="row h-left">
+				<div class="row h-left collapse-x">
 					<div class="col shrink">
 						<div class="icon-lockup">
 							<img alt="" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/cd273c3fb82c4a928c2cddc75b175cc4.png" width="32" height="32" />
@@ -130,78 +130,81 @@
 		</div> <!-- Agenda Section Header-->
 
 		<!-- Agenda Bar View-->
-
 		<div class="row compact z-1">
-			<div class="agenda-bars">
+			<div class="col">
+				<div class="agenda-bars">
 
-				<div class="day-label">
-					<div class="event-day">Monday</div>
-					<div class="event-day">Tuesday</div>
-					<div class="event-day">Wednesday</div>
-					<div class="event-day">Thursday</div>
-				</div>
+					<div class="day-label">
+						<div class="event-day">Monday</div>
+						<div class="event-day">Tuesday</div>
+						<div class="event-day">Wednesday</div>
+						<div class="event-day">Thursday</div>
+					</div>
 
-				<div class="label-col ">
-					<div class="event-label">Education</div>
-					<div class="event-label">Expo Hall &amp; Lounge</div>
-					<div class="event-label">General Session</div>
-					<div class="event-label">Sessions &amp; Workshops</div>
-					<div class="event-label">Executive Forum</div>
-					<div class="event-label">Women’s Networking Reception</div>
-					<div class="event-label">Block Party</div>
-					<div class="event-label">Partner Summit</div>
-					<div class="event-label">Futures Presentation</div>
-					<div class="event-label">Datathon</div>
-				</div>
+					<div class="label-col ">
+						<div class="event-label">Education</div>
+						<div class="event-label">Expo Hall &amp; Lounge</div>
+						<div class="event-label">General Session</div>
+						<div class="event-label">Sessions &amp; Workshops</div>
+						<div class="event-label">Executive Forum</div>
+						<div class="event-label">Women’s Networking Reception</div>
+						<div class="event-label">Block Party</div>
+						<div class="event-label">Partner Summit</div>
+						<div class="event-label">Futures Presentation</div>
+						<div class="event-label">Datathon</div>
+					</div>
 
-				<div class="event-col">
-					<span class="event-title" title="Education">Education</span>
-					<span class="event-title" title="Education">Education</span>
-					<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-					<span class="event-title" title="Continental General Session">General Session</span>
-					<span class="event-title" title="SessionsWorkshops">Sessions &amp; Workshops</span>
-					<span class="event-title" title=" Executive Forum">Executive Forum</span>
-					<span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking Reception</span>
-					<span class="event-title" title="Block Party">Block Party</span>
-					<span class="event-title" title="Partner Summit">Partner Summit</span>
-					<span class="event-title" title="Futures Presentation">Futures Presentation</span>
-					<span class="event-title" title="Datathon">Datathon</span>
+					<div class="event-col">
+						<span class="event-title" title="Education">Education</span>
+						<span class="event-title" title="Education">Education</span>
+						<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
+						<span class="event-title" title="Continental General Session">General Session</span>
+						<span class="event-title" title="SessionsWorkshops">Sessions &amp; Workshops</span>
+						<span class="event-title" title=" Executive Forum">Executive Forum</span>
+						<span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking Reception</span>
+						<span class="event-title" title="Block Party">Block Party</span>
+						<span class="event-title" title="Partner Summit">Partner Summit</span>
+						<span class="event-title" title="Futures Presentation">Futures Presentation</span>
+						<span class="event-title" title="Datathon">Datathon</span>
+					</div>
 				</div>
 			</div>
 		</div>
 
+		<!-- Agenda Bar Mobile View-->
+		<div class="row hide-md compact z-1">
+			<div class="col">
+				<div class="agenda-bars-mobile">
 
-		<div class="row compact z-1">
-			<div class="agenda-bars-mobile">
+					<div class="day-label">
+						<div class="event-day">Monday</div>
+						<div class="event-day">Tuesday</div>
+						<div class="event-day">Wednesday</div>
+						<div class="event-day">Thursday</div>
+					</div>
 
-				<div class="day-label">
-					<div class="event-day">Monday</div>
-					<div class="event-day">Tuesday</div>
-					<div class="event-day">Wednesday</div>
-					<div class="event-day">Thursday</div>
-				</div>
+					<div class="event-col">
+						<span class="event-title" title="Education">Education</span>
+						<span class="event-title" title="General Session">General Session</span>
+						<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
+						<span class="event-title" title="Datathon">Datathon</span>
 
-				<div class="event-col">
-					<span class="event-title" title="Education">Education</span>
-					<span class="event-title" title="General Session">General Session</span>
-					<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-					<span class="event-title" title="Datathon">Datathon</span>
+						<span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
+						<span class="event-title" title="Continental General Session">General Session</span>
+						<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
+						<span class="event-title" title="Block Party">Block Party</span>
+						<span class="event-title" title="Executive Forum">Executive Forum</span>
+						<span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking Reception</span>
+						<span class="event-title" title="Datathon">Datathon</span>
 
-					<span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
-					<span class="event-title" title="Continental General Session">General Session</span>
-					<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-					<span class="event-title" title="Block Party">Block Party</span>
-					<span class="event-title" title="Executive Forum">Executive Forum</span>
-					<span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking Reception</span>
-					<span class="event-title" title="Datathon">Datathon</span>
+						<span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
+						<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
+						<span class="event-title" title="Futures Presentation">Futures Presentation</span>
+						<span class="event-title" title="Partner Summit">Partner Summit</span>
+						<span class="event-title" title="Datathon">Datathon</span>
 
-					<span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
-					<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-					<span class="event-title" title="Futures Presentation">Futures Presentation</span>
-					<span class="event-title" title="Partner Summit">Partner Summit</span>
-					<span class="event-title" title="Datathon">Datathon</span>
-
-					<span class="event-title" title="Education">Education</span>
+						<span class="event-title" title="Education">Education</span>
+					</div>
 				</div>
 			</div>
 		</div>
