--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -88,15 +88,15 @@
 			</div>
 		</div>
 
-		<div class="row v-top between margin-top-30">
-			<div class="col md-4 lg-4 z-2">
+		<div class="row between margin-top-30 z-2">
+			<div class="col md-6 lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Why Attend</h5>
 					<p>World 2019 will be your best opportunity of the year to hear success stories and network with your peers, get a sneak preview of new features, and gain quick skills with onsite&nbsp;workshops.</p>
 					<a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/d2dcc784ba3c40789ce046fe4f35681c.docx" class="cta-button orange carat" target="_blank">Justification Letter</a>
 				</div>
 			</div>
-			<div class="col md-4 lg-4  z-2">
+			<div class="col md-6 lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Sponsorship</h5>
 					<p>MicroStrategy World is a great opportunity for partners to showcase solutions and network with leading companies. If you’re interested in sponsorship or have any questions, contact&nbsp;us.</p>
@@ -104,7 +104,7 @@
 				</div>
 
 			</div>
-			<div class="col md-4 lg-4  z-2">
+			<div class="col md-6 lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Call for Speakers</h5>
 					<p>Passionate about MicroStrategy? Share your story at World&nbsp;2019.</p>
@@ -119,12 +119,44 @@
 		</div>
 	</section>
 
+	<section id="contests" class="background-orange section-ribbon">
+		<div class="row h-left z-2">
+			<div class="col md-6 lg-4">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">2019 Customer Awards</h5>
+					<p>It’s time to celebrate your success! Submit your most innovation or impactful MicroStrategy-powered solution for a chance to be recognized in front of our global community at World. Winners get free passes! Submissions are due by November&nbsp;30th.</p>
+					<a href="https://www.microstrategy.com/us/go/world-2019-customer-awards" class="cta-button blue carat" target="_blank">Submit your entry</a>
+				</div>
+			</div>
+			<div class="col md-6 lg-4">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Datathon 2019</h5>
+					<p>Ready to put your skills to the test? Teams will compete head-to-head in the main exhibit hall at the center of all the action to create an innovative solution using the MicroStrategy Platform. The winning team gets&nbsp;<strong>$10,000</strong>.</p>
+					<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button blue carat" target="_blank">Submit application</a>
+				</div>
+
+			</div>
+			<div class="col md-6 lg-4">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Dossier Contest</h5>
+					<p>So you think you can dossier? Prove it! Enter the 2019 Dossier Contest and show us how you’ve built a transformative solution that’s creative, intuitive, and impactful. If your dossier is selected for recognition, you’ll win an iPhoneXs or Apple&nbsp;Watch.</p>
+					<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" target="_blank" class="cta-button blue carat">Submit a proposal</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="pattern-overlay z-1">
+			<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/90aa2547554248ca83f8686b73bf3cfd.png" />
+			<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" />
+		</div>
+	</section>
+
 	<section id="agenda" class="background-blue section-sparse-triangles">
 		<div class="row h-left z-1">
 			<div class="col md-10 lg-9 xl-8">
 				<div class="bullet-group large">
 					<h2 class="h3 text-uppercase text-bold">Agenda at a Glance</h2>
-					<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat" target="_blank">View Full List of&nbsp;Sessions</a>
+					<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat">View Full List of&nbsp;Sessions</a>
 				</div>
 			</div>
 		</div> <!-- Agenda Section Header-->
@@ -357,7 +389,7 @@
 </div>
 </div> -->
 <div class="col sm-10 md-8 lg-6">
-	<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange" target="_blank">View Full List of&nbsp;Sessions</a>
+	<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat">View Full List of&nbsp;Sessions</a>
 </div>
 </div>
 
@@ -410,13 +442,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="row pricing-wrapper compact v-middle z-2">
-		<div class="col md-6 lg-3">
+	<div class="row pricing-wrapper h-left compact v-middle z-2">
+		<div class="col lg-4">
 			<div class="pricing-block current">
 				<span class="type">Extended Early Bird</span>
 				<span class="price"><span class="currency">$</span>1195</span>
 				<span class="date">Until Nov&nbsp;16, 2018</span>
-				<a class="cta-button orange carat expand" href="{[E-RSVP YES URL]}">Register now</a>
+				<a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
 		<div class="col md-4 lg-3">
@@ -433,7 +465,7 @@
 				<span class="date">Until Feb&nbsp;3, 2019</span>
 			</div>
 		</div>
-		<div class="col md-4 lg-3">
+		<div class="col md-4 lg-2">
 			<div class="pricing-block">
 				<span class="type">Onsite Rate</span>
 				<span class="price"><span class="currency">$</span>1695</span>
@@ -498,8 +530,8 @@
 		<div class="col md-10 lg-9 xl-8">
 			<div class="bullet-group large">
 				<h2 class="h3 text-uppercase text-bold">Sponsors</h2>
-				<p class="h4 text-black">MicroStrategy World is a great opportunity for partners to showcase solutions and network with leading companies. If you're interested in sponsoring World 2019 contact <a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry">Amanda Zavada</a>. <br />If you have general questions regarding World please contact <a href="mailto:microstrategyworld@microstrategy.com?subject=World General Inquiry">MicroStrategy</a>.</p>
-				<a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry" class="cta-button orange carat" target="_blank">Contact Us About Sponsorship</a>
+				<p class="h4 text-black">MicroStrategy World is a great opportunity for partners to showcase solutions and network with leading companies. If you're interested in sponsoring World 2019 contact <a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry">Amanda Zavada</a>. If you have general questions regarding World please contact <a href="mailto:microstrategyworld@microstrategy.com?subject=World General Inquiry">MicroStrategy</a>.</p>
+				<a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry" class="cta-button orange carat">Contact Us About Sponsorship</a>
 			</div>
 		</div>
 	</div>
