Adding print feature

--- a/HTML/Agenda_builder-version.html
+++ b/HTML/Agenda_builder-version.html
@@ -104,8 +104,8 @@
 					<div class="col">
 						<h2 class="text-normal">My Agenda</h2>
 						<p class="h4">Below are your selected sessions, use the agenda toggle to remove sessions from the list.</p>
-						<div id="#print-agenda" class="cta-button medium blue carat">Print this Agenda</div>
-						<div id="#share-agenda" class="cta-button medium orange carat">Share this Agenda</div>
+						<div id="print-agenda" class="cta-button medium blue carat">Print this Agenda</div>
+						<div id="share-agenda" class="cta-button medium orange carat">Share this Agenda</div>
 					</div>
 					<div id="my-agenda-list" class="col">
 
