remove early bird special from pricing

--- a/HTML/registration first page.html
+++ b/HTML/registration first page.html
@@ -4,9 +4,9 @@
 		<div class="col lg-9 xl-7">
 			<h2 class="text-bold margin-top-20">Conference price</h2>
 			<div class="pattern-between row h-left expand collapse margin-top-10">
-				<div class="col sm-2 md-1 background-pattern pattern-ribbon pattern-small height-x-tiny"></div>
-				<div class="col sm-2 md-1 background-pattern pattern-square-dots pattern-small height-x-tiny"></div>
-				<div class="col sm-2 md-1 background-pattern pattern-vertical-bars pattern-small height-x-tiny"></div>
+				<div class="col sm-2 md-1 background-pattern pattern-ribbon pattern-small height-x-tiny">&nbsp;</div>
+				<div class="col sm-2 md-1 background-pattern pattern-square-dots pattern-small height-x-tiny">&nbsp;</div>
+				<div class="col sm-2 md-1 background-pattern pattern-vertical-bars pattern-small height-x-tiny">&nbsp;</div>
 			</div>
 			<p>Promotional offers and discounted group rates are also available, <a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-20-2c0e177416a0487b95c82069ccaa35ce.aspx#special-promotions" target="_blank">click here</a> for more information (opens in new&nbsp;window).</p>
 		</div>
@@ -15,13 +15,6 @@
 	<div class="row h-left pricing-wrapper collapse v-middle">
 		<div class="col shrink-md">
 			<div class="pricing-block slim current">
-				<span class="type">Extended Early Bird</span>
-				<span class="price"><span class="currency">$</span>1195</span>
-				<span class="date">Until Nov&nbsp;16, 2018</span>
-			</div>
-		</div>
-		<div class="col shrink-md">
-			<div class="pricing-block slim">
 				<span class="type">Fall Special</span>
 				<span class="price"><span class="currency">$</span>1395</span>
 				<span class="date">Until Dec&nbsp;20, 2018</span>
@@ -47,9 +40,9 @@
 		<div class="col lg-9 xl-7">
 			<h2 class="text-bold margin-top-20">Start registration</h2>
 			<div class="pattern-between row h-left expand collapse margin-top-10">
-				<div class="col sm-2 md-1 background-pattern pattern-triangles pattern-small height-x-tiny"></div>
-				<div class="col sm-2 md-1 background-pattern pattern-round-dots pattern-small height-x-tiny"></div>
-				<div class="col sm-2 md-1 background-pattern pattern-tartan pattern-small height-x-tiny"></div>
+				<div class="col sm-2 md-1 background-pattern pattern-triangles pattern-small height-x-tiny">&nbsp;</div>
+				<div class="col sm-2 md-1 background-pattern pattern-round-dots pattern-small height-x-tiny">&nbsp;</div>
+				<div class="col sm-2 md-1 background-pattern pattern-tartan pattern-small height-x-tiny">&nbsp;</div>
 			</div>
 			<p>Please complete the information below, then click Next to proceed.</p>
 		</div>
