--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -44,9 +44,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="last-call">
-					<p>Last day for Early Bird pricing</p>
-				</div>
 				<div class="cta-home-group">
 					<a class="cta-button large red carat" href="{[E-RSVP YES URL]}">Register now</a>
 					<a href="https://www.cvent.com/c/abstracts/d4332719-f83e-4369-91ef-eb7249af7822" target="_blank" class="cta-button large blue carat">Call for Speakers</a>
@@ -146,8 +143,8 @@
 			</div>
 		</div>
 		<div class="pattern-overlay z-1">
-			<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/90aa2547554248ca83f8686b73bf3cfd.png" />
-			<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" />
+			<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/90aa2547554248ca83f8686b73bf3cfd.png" width="602" height="425" />
+			<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" width="400" height="391" />
 		</div>
 	</section>
 
@@ -442,20 +439,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="row pricing-wrapper h-left compact v-middle z-2">
-		<div class="col lg-4">
+	<div class="row pricing-wrapper compact v-middle z-2">
+		<div class="col md-4">
 			<div class="pricing-block current">
-				<span class="type">Extended Early Bird</span>
-				<span class="price"><span class="currency">$</span>1195</span>
-				<span class="date">Until Nov&nbsp;16, 2018</span>
-				<a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
-			</div>
-		</div>
-		<div class="col md-4 lg-3">
-			<div class="pricing-block">
 				<span class="type">Fall Special</span>
 				<span class="price"><span class="currency">$</span>1395</span>
 				<span class="date">Until Dec&nbsp;20, 2018</span>
+				 <a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
 		<div class="col md-4 lg-3">
@@ -465,7 +455,7 @@
 				<span class="date">Until Feb&nbsp;3, 2019</span>
 			</div>
 		</div>
-		<div class="col md-4 lg-2">
+		<div class="col md-4 lg-3">
 			<div class="pricing-block">
 				<span class="type">Onsite Rate</span>
 				<span class="price"><span class="currency">$</span>1695</span>
@@ -508,8 +498,8 @@
 				<span class="text-label navy">Special Rate</span>
 				<h4 class="text-normal">Government and non-profit&nbsp;rate</h4>
 				<p>For special Government or Non-Profit rates</p>
+				<a class="cta-button navy carat expand text-white" href="mailto:microstrategyworld@microstrategy.com?subject=Inquiry about MicroStrategy World special government and non-profit rate">Contact Us</a>
 			</div>
-			<a class="cta-button navy carat expand text-white" href="mailto:microstrategyworld@microstrategy.com?subject=Inquiry about MicroStrategy World special government and non-profit rate">Contact Us</a>
 		</div>
 	</div>
 	<div class="row h-left">
@@ -701,7 +691,7 @@
 		<div class="col md-6 margin-top-30 margin-bottom-30">
 			<a href="//fast.wistia.net/embed/iframe/owv9gfazml?popover=true" class="photo video-thumbnail world2018-keynote-wide-main-stage shadow wistia-popover[height=720,playerColor=7b796a,width=1280]">
 				<div class="play-cta">
-					<img alt="" class="play-icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b00aeb809ea64b5184003d46435b5e4c.png" height="70" width="70" />
+					<img alt="" class="play-icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b00aeb809ea64b5184003d46435b5e4c.png" width="70" height="70" />
 				</div>
 			</a>
 			<div class="bullet-group margin-top-20">
@@ -720,7 +710,7 @@
 		<div class="col md-6 margin-top-30 margin-bottom-30">
 			<a href="//fast.wistia.net/embed/iframe/8ue5td90oz?popover=true" class="photo video-thumbnail world2018-keynote-tim-lang-close shadow wistia-popover[height=720,playerColor=7b796a,width=1280]">
 				<div class="play-cta">
-					<img alt="" class="play-icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b00aeb809ea64b5184003d46435b5e4c.png" height="70" width="70" />
+					<img alt="" class="play-icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b00aeb809ea64b5184003d46435b5e4c.png" width="70" height="70" />
 				</div>
 			</a>
 			<div class="bullet-group margin-top-20">
@@ -788,21 +778,21 @@
 <section id="call-to-action">
 	<div class="final-cta">
 		<div class="row">
-			<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0">
+			<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0" />
 		</div>
 		<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
 	</div>
 
 	<div class="final-date">
 		<div class="icon-lockup text-white">
-			<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32">
+			<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32" />
 			<p>
 				<strong class="text-uppercase text-bold text-white">February</strong>
 				4th – 6th 2019
 			</p>
 		</div>
 		<div class="icon-lockup text-white">
-			<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32">
+			<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32" />
 			<p>
 				<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
 				Phoenix Convention Center
@@ -810,8 +800,6 @@
 		</div>
 	</div>
 </section>
-
-
 
 </div>
 {[A-CUSTOM TAG:WISTIA-POPOVER]}
