add seperate print styles for agenda builder print poup
styles are stored in kentico - external assets - event support - world-2019

--- a/HTML/Agenda_builder-version.html
+++ b/HTML/Agenda_builder-version.html
@@ -232,6 +232,7 @@
 {[E-CUSTOM TAG:AGENDA-JPLIST-SCRIPT]}
 {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-1]}
 {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-2]}
+{[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-3]}
 <style>
 	.register-btn-bottom {display:none;}
 	div.bottom {padding:0;}
