remove gray bkg from sponsor logos

--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -39,7 +39,7 @@
         </div>
         <div class="row h-left">
             <div class="col md-5 lg-3">
-                <a href="http://www.datafactz.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="http://www.datafactz.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0e503373565c493bbf4923b515eb0fe1.png" alt="DatafactZ logo">
                 </a>
             </div>
@@ -51,7 +51,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.datastrong.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.datastrong.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0da97e8abfa1420083451ff54b23383d.png" alt="Datastrong logo">
                 </a>
             </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://fivetran.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://fivetran.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3add6b3ecbf745b59050e3079cc49a25.png" alt="Fivetran logo">
                 </a>
             </div>
@@ -75,7 +75,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.perficient.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.perficient.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8ed45aa4d60e49c78acd266fbe5b37ef.png" alt="Perficient logo">
                 </a>
             </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://sensecorp.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://sensecorp.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6ff67ea9652d4e67b82af0d715a242fb.png" alt="Sensecorp logo">
                 </a>
             </div>
@@ -99,7 +99,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.snowflake.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.snowflake.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bbe1acd95f3644269a31899af24f4819.png" alt="Snowflake logo" />
                 </a>
             </div>
@@ -111,7 +111,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.teradata.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.teradata.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e13c82faae9f410bba814cc48725e303.png" alt="Teradata logo">
                 </a>
             </div>
@@ -136,7 +136,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.dataflix.com/about/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.dataflix.com/about/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7fbf95d3d3e9467f878372505c555281.png" alt="Dataflix logo">
                 </a>
             </div>
@@ -148,7 +148,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.inteldatasolutions.com" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.inteldatasolutions.com" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/a0f58eae742e4319883f3a8a11085909.png" alt="Intelligent Data Solutions logo">
                 </a>
             </div>
@@ -160,7 +160,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="http://www.invexer.com" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="http://www.invexer.com" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0e56b94174ed4aff99eaa46c95d0495e.png" alt="Invexer logo">
                 </a>
             </div>
@@ -173,7 +173,7 @@
 
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="http://www.mightywizards.com" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="http://www.mightywizards.com" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/688c7a894e704ef8b992f115e79d9ff9.png" alt="Mighty Wizard logo">
                 </a>
             </div>
@@ -186,7 +186,7 @@
 
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="http://www.obase.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="http://www.obase.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/69d91f86ce89441e90adb78c47225a9b.png" alt="Obase logo">
                 </a>
             </div>
@@ -198,7 +198,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="http://www.pxltd.ca/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="http://www.pxltd.ca/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/183fb6fb8a0b4f8d99f9b408beb0db54.png" alt="Project X logo" />
                 </a>
             </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://smartbridge.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://smartbridge.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/168ea6c7d68d4012add4619e3c1f993d.png" alt="SmartBridge logo">
                 </a>
             </div>
@@ -222,7 +222,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.vitara.co/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.vitara.co/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bf1d03ca62d94ab39bb183c0695b9ba4.png" alt="Vitara logo">
                 </a>
             </div>
@@ -234,7 +234,7 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.yellowbrick.com/" target="_blank" class="ratio sixteen-nine background-light-gray">
+                <a href="https://www.yellowbrick.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b1aa6290a4cc4c76b612dce374caeb24.png" alt="Yellowbrick logo">
                 </a>
             </div>
