Updating global.html

--- a/HTML/Global.html
+++ b/HTML/Global.html
@@ -11,15 +11,21 @@
 	<script src="https://www.microstrategy.com/CMSTemplates/microstrategy/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
 	<script src="https://www.microstrategy.com/CMSTemplates/microstrategy/bower_components/jplist/dist/js/jplist.history-bundle.min.js"></script>
 
-	<style type="text/css" id="styles"></style>
+	<link rel="stylesheet" type="text/css" href="http://events.microstrategy.com/Events/stylesheets/site1.css?version=10.0.27" />
+	<link rel="stylesheet" type="text/css" href="http://events.microstrategy.com/events/GetAdvancedCSS.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce&rand=691688901" />
+
+
+	<!--<style type="text/css" id="styles"></style>
 	<style type="text/css" id="styles2"></style>
+	<style type="text/css" id="styles3"></style>-->
 
 	<script>
 		$(function ()
 		{
 			$("#agenda").load("Agenda_builder-version.html");
-			$("#styles").load("../CSS/main.css");
-			$("#styles2").load("http://events.microstrategy.com/events/GetAdvancedCSS.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce&rand=1513171984");
+			//$("#styles").load("../CSS/main.css");
+			//$("#styles2").load("http://events.microstrategy.com/events/GetAdvancedCSS.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce&rand=691688901");
+			//$("#styles3").load("http://events.microstrategy.com/events/stylesheets/questionRedesign.css?version=10.0.27");
 			$("#scripts").load("../scripts/agenda-builder.js");
 		});
 	</script>
