Removing alert on "Copy" event

--- a/HTML/Agenda_builder-version.html
+++ b/HTML/Agenda_builder-version.html
@@ -106,7 +106,7 @@
 						<p class="h4">Below are your selected sessions, use the agenda toggle to remove sessions from the list.</p>
 						<div id="print-agenda" class="cta-button medium blue carat">Print this Agenda</div>
 						<div id="share-agenda" class="cta-button medium orange carat">Generate share link</div>
-						<div id="shareURL"><input type="text" id="inputURL" value=""><button class="btnCopy" onclick="copyURL()">Copy</button></div>
+						<div id="shareURL"><input type="text" id="inputURL" value=""/><span id="buttonCopy" class="btnCopy" onclick="copyURL()">Copy</span></div>
 					</div>
 					<div id="my-agenda-list" class="col">
 
