add cyber monday special pricing

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -24,7 +24,7 @@
 					</span>
 				</h1>
 				<h2 class="text-blue text-normal sub-text">The transformation starts&nbsp;here.</h2>
-				<div class="row h-left collapse-x">
+				<div class="row h-left compact">
 					<div class="col shrink">
 						<div class="icon-lockup">
 							<img alt="" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/cd273c3fb82c4a928c2cddc75b175cc4.png" width="32" height="32" />
@@ -42,6 +42,9 @@
 								Phoenix Convention Center
 							</p>
 						</div>
+					</div>
+					<div class="col sm-12">
+						<p class="h4 text-normal">Cyber Monday is here! Use code <strong class="text-red">MWorld19Cyber</strong> by midnight and save&nbsp;<strong class="text-red">$600</strong></p>
 					</div>
 				</div>
 				<div class="cta-home-group">
@@ -440,22 +443,29 @@
 		</div>
 	</div>
 	<div class="row pricing-wrapper compact v-middle z-2">
-		<div class="col md-4">
+		<div class="col lg-4">
 			<div class="pricing-block current">
-				<span class="type">Fall Special</span>
-				<span class="price"><span class="currency">$</span>1395</span>
-				<span class="date">Until Dec&nbsp;20, 2018</span>
+				<span class="type">Cyber Monday</span>
+				<span class="price"><span class="currency">$</span>1095</span>
+				<span class="date">Until Midnight Nov&nbsp;26, 2018</span>
 				 <a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
-		<div class="col md-4 lg-3">
+		<div class="col md-4 lg-2">
+			<div class="pricing-block">
+				<span class="type">Fall Special</span>
+				<span class="price"><span class="currency">$</span>1395</span>
+				<span class="date">Until Dec&nbsp;20, 2018</span>
+			</div>
+		</div>
+		<div class="col md-4 lg-2">
 			<div class="pricing-block">
 				<span class="type">Winter Special</span>
 				<span class="price"><span class="currency">$</span>1495</span>
 				<span class="date">Until Feb&nbsp;3, 2019</span>
 			</div>
 		</div>
-		<div class="col md-4 lg-3">
+		<div class="col md-4 lg-2">
 			<div class="pricing-block">
 				<span class="type">Onsite Rate</span>
 				<span class="price"><span class="currency">$</span>1695</span>
