add codes to the cyber monday deal copy

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -447,7 +447,7 @@
 			<div class="pricing-block current">
 				<span class="type">Cyber Monday</span>
 				<span class="price"><span class="currency">$</span>1095</span>
-				<span class="date">Until Midnight Nov&nbsp;26, 2018</span>
+				<span class="date">Use code <strong class="text-bold text-orange">MWorld19Cyber</strong> on Nov&nbsp;26,&nbsp;2018</span>
 				 <a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
