--- a/HTML/registration first page.html
+++ b/HTML/registration first page.html
@@ -17,7 +17,7 @@
 			<div class="pricing-block slim current">
 				<span class="type">Cyber Monday</span>
 				<span class="price"><span class="currency">$</span>1095</span>
-				<span class="date">Until Midnight Nov&nbsp;26, 2018</span>
+				<span class="date">Use code <strong class="text-red">MWorld19Cyber</strong> on Nov&nbsp;26,&nbsp;2018</span>
 			</div>
 		</div>
 		<div class="col shrink-md">
