--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -512,9 +512,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="row h-left">
+	<div class="row h-left z-2">
 		<div class="col md-10 lg-8">
 			<p><small>*Special offers cannot be combined with any other offer or promotional&nbsp;code.</small></p>
+			<p><small>See <a class="text-white" href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/7762d2cdea38427288acbb57825221b9.pdf">Registration Terms &amp; Conditions</a></small></p>
 		</div>
 	</div>
 	<div class="pattern-overlay z-1">
