added T&C line and link

--- a/HTML/registration first page.html
+++ b/HTML/registration first page.html
@@ -9,6 +9,7 @@
 				<div class="col sm-2 md-1 background-pattern pattern-vertical-bars pattern-small height-x-tiny">&nbsp;</div>
 			</div>
 			<p>Promotional offers and discounted group rates are also available, <a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-20-2c0e177416a0487b95c82069ccaa35ce.aspx#special-promotions" target="_blank">click here</a> for more information (opens in new&nbsp;window).</p>
+			<p>See the <a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/7762d2cdea38427288acbb57825221b9.pdf">Registration Terms &amp; Conditions</a></p>
 		</div>
 	</div>
 
