--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 					<div class="col sm-12">
-						<p class="h4 text-normal">Cyber Monday is here! Use code <strong class="text-red">MWorld19Cyber</strong> by midnight and save&nbsp;<strong class="text-red">$600</strong></p>
+						<p class="h4 text-normal">Cyber Week is here! Use code <strong class="text-red">MWorld19Cyber</strong> by midnight Friday to save&nbsp;<strong class="text-red">$600</strong></p>
 					</div>
 				</div>
 				<div class="cta-home-group">
@@ -445,9 +445,9 @@
 	<div class="row pricing-wrapper compact v-middle z-2">
 		<div class="col lg-4">
 			<div class="pricing-block current">
-				<span class="type">Cyber Monday</span>
+				<span class="type">Cyber Week</span>
 				<span class="price"><span class="currency">$</span>1095</span>
-				<span class="date">Use code <strong class="text-bold text-orange">MWorld19Cyber</strong> on Nov&nbsp;26,&nbsp;2018</span>
+				<span class="date">Use code <strong class="text-bold text-orange">MWorld19Cyber</strong> by midnight Friday to save&nbsp;<strong class="text-bold text-orange">$600</strong> </span>
 				 <a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
