--- a/HTML/registration first page.html
+++ b/HTML/registration first page.html
@@ -16,9 +16,9 @@
 	<div class="row h-left pricing-wrapper collapse v-middle">
 		<div class="col shrink-md">
 			<div class="pricing-block slim current">
-				<span class="type">Cyber Monday</span>
+				<span class="type">Cyber Week</span>
 				<span class="price"><span class="currency">$</span>1095</span>
-				<span class="date">Use code <strong class="text-red">MWorld19Cyber</strong> on Nov&nbsp;26,&nbsp;2018</span>
+				<span class="date">Use code <strong class="text-red">MWorld19Cyber</strong> by midnight Friday to save&nbsp;<strong class="text-red">$600</strong></span>
 			</div>
 		</div>
 		<div class="col shrink-md">
